<resources>
    <!-- General Strings -->
    <string name="app_name">Inventory</string>
    <string name="price">Price: </string>
    <string name="qty">QTY: </string>
    <string name="save">Save</string>

    <!--Inventory Layout Strings-->
    <string name="my_inventory">My Inventory</string>
    <string name="add_product">Add Product</string>
    <string name="sale">Sale</string>
    <string name="empty">↗\nStart by adding a product from the top right corner</string>

    <!--Product Details Layout-->
    <string name="product_details">Product Details</string>
    <string name="supplier_name">Supplier: </string>
    <string name="supplier_phone">Phone: </string>

    <!--Product Edit Layout-->
    <string name="edit_product">Edit Product</string>
    <string name="product_name">Product Name</string>

    <!--TALK TO MEEEE-->
    <string name="insertion_success">Product Inserted Successfully</string>
    <string name="insertion_failed">Product Insertion Failed</string>

    <string name="update_success">Product Updated Successfully</string>
    <string name="update_failed">Product Update Failed</string>


    <string name="delete_confirm">Delete Product?</string>
    <string name="delete_yes">Delete</string>
    <string name="delete_no">Cancel</string>
    <string name="delete_success">Product Deleted</string>
    <string name="delete_failed">Product Deletion Failed</string>
    <string name="price_hint">Price</string>
    <string name="phone_hint">xxxxxxxxxxx</string>


</resources>
